@@ -1,0 +1,7 @@
+<component name="ProjectDictionaryState">
+  <dictionary name="jose">
+    <words>
+      <w>arduino</w>
+    </words>
+  </dictionary>
+</component>
