@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 def versionMajor = 0
 def versionMinor = 0
 def versionPatch = 2
-def versionBuild = 0
+def versionBuild = 1
 
 android {
     compileSdkVersion 25
@@ -12,7 +12,7 @@ android {
         applicationId "es.udc.psi1718.project"
         minSdkVersion 17
         targetSdkVersion 25
-        versionCode versionMajor * 10000 + versionMinor * 1000 + versionPatch * 100 + versionBuild
+        versionCode versionMajor * 100000 + versionMinor * 10000 + versionPatch * 1000 + versionBuild
         versionName "${versionMajor}.${versionMinor}.${versionPatch}"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
@@ -35,9 +35,7 @@ dependencies {
 
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.android.support:gridlayout-v7:25.3.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.android.support:support-vector-drawable:25.3.1'
     testCompile 'junit:junit:4.12'
 }
