@@ -1,6 +1,16 @@
 package es.udc.psi1718.project.view.customviews.controllers;
 
-
+/**
+ * Interface that acts as listener for {@link ControllerView} events
+ */
 public interface ControllerViewEventListener {
-	public void controllerSentCommand(String arduinoPin, int pinType, int dataType, int data);
+	/**
+	 * Indicates that a controller sent a command
+	 *
+	 * @param arduinoPin pin of the controller
+	 * @param pinType    type of the pin of the controller
+	 * @param dataType   type of the data
+	 * @param data       data
+	 */
+	void controllerSentCommand(String arduinoPin, int pinType, int dataType, int data);
 }
