@@ -1,7 +1,16 @@
 package es.udc.psi1718.project.view.customviews.controllersgrid;
 
 
+/**
+ * Interface that acts as listener for {@link ControllersGridLayout}
+ */
 public interface ControllersGridListener {
 
-	public void ControllerChanged(int initialPosition, int finalPosition);
+	/**
+	 * Indicates that controller have change positions in the layout
+	 *
+	 * @param initialPosition initial position where the controller was
+	 * @param finalPosition   new position to where the controller is moved
+	 */
+	void controllersPositionChanged(int initialPosition, int finalPosition);
 }
