@@ -81,6 +81,7 @@
             android:layout_alignParentEnd="true"
             android:layout_margin="@dimen/fab_margin"
             android:clickable="true"
+            android:focusable="true"
             android:src="@drawable/ic_action_add"
             app:fabSize="mini"/>
     </RelativeLayout>
