@@ -1,103 +1,0 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="@dimen/alert_dialog_outter_padding">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/newcontroller_nameedittext_hint">
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/new_controller_name_edit_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textCapWords"/>
-
-        </android.support.design.widget.TextInputLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/alert_dialog_inner_layout_top_margin">
-
-        <TextView
-            android:id="@+id/new_controller_pin_number_label"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:text="@string/pin_number_string"/>
-
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:hint="@string/newcontroller_pinnumber_hint">
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/new_controller_pin_number_edit_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:maxLength="2"
-                android:inputType="number"/>
-
-        </android.support.design.widget.TextInputLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/alert_dialog_inner_layout_top_margin"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/new_controller_pin_type_label"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/pin_type_string"/>
-
-        <Spinner
-            android:id="@+id/new_controller_pin_type_spinner"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:entries="@array/pin_type_array">
-
-        </Spinner>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/alert_dialog_inner_layout_top_margin"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/new_controller_data_type_label"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/data_type_string"/>
-
-        <Spinner
-            android:id="@+id/new_controller_data_type_spinner"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:entries="@array/data_type_array">
-
-        </Spinner>
-    </LinearLayout>
-
-</LinearLayout>
