@@ -60,7 +60,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:max="255"
-            android:padding="@dimen/controller_slider_padding"/>
+            android:padding="@dimen/controller_switch_padding"/>
 
     </LinearLayout>
 
