@@ -1,2 +1,3 @@
-
-v0.1
+- Created landscape alternative layouts for 'activity_about' and 'customgrid_layout'
+- Now panelName is sent via extra on intent communication between 'MainActivity' and 'ControllersActivity'
+- ActionBar on 'ControllersActivity' now has the name of the panel
